--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -12,8 +12,8 @@
   "Smtp": {
     "Host": "smtp.gmail.com",
     "Port": 465,
-    "Username": "team.pettopia@gmail.com",
-    "Password": "qfplgkzupbiesfgw",
+    "Username": "{USER_NAME}",
+    "Password": "{PASSWORD}",
     "Name": "Pettopia",
     "From": "Pettopia",
     "EnableSsl": true,
